3.1.0

  * emscripten port;
  * fix div by zero in rnd;
  * fix in loadmod (from gamefile);
  * fix in path (.walk as function);
  * fixes in doc;
  * code cleanups (compilation warnings);

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 15 Jul 2017 16:33:00 +0300

3.0.1

  * fix segfault while pause/resume;
  * stead3: start() logic fix;

 -- Peter Kosyh <p.kosyh@gmail.com>  Wed, 24 May 2017 21:03:00 +0300

3.0.0

  * refactoring (src/instead);
  * tiny-instead;
  * bug fixes;
  * completely new stead3;
  * sound.load_mem;
  * sprite.pixels;

 -- Peter Kosyh <p.kosyh@gmail.com>  Wed, 19 Apr 2017 17:45:00 +0300

2.4.1

  * sprite from sprite load bug fixed with scaling;
  * fix in themes pager;
  * fix in stead.menu_toggle();
  * memory leak in free_font (sprtites) fixed;
  * new stead.mouse_show();
  * fix in txtnb() escaping;
  * fix in stead.busy();
  * fixes in fonts,cutscene and keyboard example modules;
  * ua -> uk language, fixes in translation;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 16 Apr 2016 13:50:00 +0300

2.4.0

  * txty (iface.y) -- y position in text;
  * menu_toggle ("themes", "settings" added), w/o return to top menu;
  * win.ways.mode = top|bottom in themes;
  * game themes support (themes/ directory in game);
  * set theme vars is not working when not using own themes;
  * fix stead.api_atleast/atleast when using with vv.mm format;
  * be more strict while loading combined images;
  * in -debug mode any "resource not found" messages are errors;
  * be more simple with walk from enter/exit (>= 2.4.0);
  * About menu shows game information;
  * -standalone mode;
  * scr.gfx.icon added (SDL2 only, experimental);
  * -noconfig parameter;
  * profiles support added (-profile parameter);
  * -hires parameter and HQ option (enabled by default);
  * -modes parameter;
  * Android-NG and IOS ports improvements;
  * font size scale is displayed in percents;
  * -fontscale <percents> argument;
