@@ -6,6 +6,8 @@
   * fix in path (.walk as function);
   * fixes in doc;
   * code cleanups (compilation warnings);
+  * instead.noise1/2/3/4 (Perlin Noise);
+  * pixels:scale()/rotate();
 
  -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 15 Jul 2017 16:33:00 +0300
 
